# Plover_Mejiro

./: .gitignore  MANIFEST.in  README.md  setup.cfg  verb.py
Mejiro/: system.py
Mejiro/default/: mejiro_kana.py  mejiro_users.json  settings.py
Mejiro/dictionaries/Defaults/: Mejiro_Commands.json  Mejiro_Kana.py  Mejiro_Users.json  mejiro_commands.json  mejiro_kana.py  settings.py
Mejiro/dictionaries/default/: abbreviations.py  func.py  mejiro.py  mejiro_base.py  mejiro_commands.json  mejiro_users.json  settings.py  translate.py  verb.py
