[metadata]
name = Mejiro
version = 2.5.4
description = Japanese stenography for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = JEEBIS27
author_email = jeebis.iox@gmail.com
license = GPL-3.0-or-later
url =https://github.com/JEEBIS27/Plover_Mejiro
project_urls =
	Source Code = https://github.com/JEEBIS27/Plover_Mejiro
	Issue Tracker = https://github.com/JEEBIS27/Plover_Mejiro/issues
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
        plover>=5.1.0
		plover-system-switcher
		plover-last-translation
   		plover-python-dictionary
packages =
	Mejiro
	Mejiro.dictionaries.default

[options.entry_points]
plover.system = 
 Mejiro = Mejiro.system

[options.exclude_package_data]
Mejiro.dictionaries =
    default/*